# Curlwright

./: .gitignore  LICENSE  MANIFEST.in  README.md  curlwright.py  pyproject.toml  requirements.txt  setup.py  vulture_whitelist.py
.github/workflows/: ci.yml  publish.yml
curlwright/: __init__.py  app.py  bootstrap.py  cli.py  cli_parser.py  contracts.py  errors.py  executor.py  logger.py  main.py  models.py  parsers.py  paths.py  runtime.py  sarif.py  utils.py
curlwright/application/: __init__.py  request_executor.py  use_cases.py
curlwright/domain/: __init__.py  core.py  policy.py
curlwright/infrastructure/: __init__.py  browser_challenge_monitor.py  browser_manager.py  browser_stealth.py  bypass_artifacts.py  bypass_classifier.py  bypass_manager.py  factories.py  fs.py  logging.py  nodriver_manager.py  parsers.py  persistence.py  playwright.py  playwright_runtime.py  protection_runtime.py
curlwright/interfaces/: __init__.py  cli_app.py  contracts.py  sarif.py
examples/: post_json.txt  simple_get.txt  test_no_gui.txt  with_headers.txt
scripts/: run_coverage.py  run_real_bypass_e2e.py
src/: __init__.py  cli.py  runtime_compat.py
src/core/: __init__.py  browser_manager.py  bypass_manager.py  request_executor.py
src/parsers/: __init__.py  curl_parser.py
src/utils/: __init__.py  cookie_manager.py  domain_state.py  logger.py
tests/: e2e_real_cloudflare.py  helpers.py  test_architecture_rules.py  test_browser_manager.py  test_browser_stealth_security.py  test_bypass_classifier_logging.py  test_bypass_manager.py  test_bypass_manager_paths.py  test_core_defensive_paths.py  test_curl_parser.py  test_domain_core_paths.py  test_entrypoints.py  test_final_line_coverage.py  test_interfaces_and_use_cases.py  test_line_completion.py  test_nodriver_engine.py  test_pipeline_integration.py  test_playwright_runtime_logging.py  test_public_api.py  test_real_coverage_paths.py  test_release_artifacts.py  test_request_executor.py  test_request_executor_logging.py  test_request_executor_paths.py  test_use_cases_logging.py  test_utils_components.py
